--- a/gallery.html
+++ b/gallery.html
@@ -72,28 +72,32 @@
 
     <div class="gallery-grid">
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/ZsjYYMd/IMG-20250921-113033.jpg" alt="ছবি ১">
+            <img src="https://i.ibb.co.com/Q3ftj4MR/IMG-20250923-112252.jpg" alt="ছবি ১">
+        </div>
+        
+        <div class="gallery-item">
+            <img src="https://i.ibb.co.com/ZsjYYMd/IMG-20250921-113033.jpg" alt="ছবি ২">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/Vc9z8h1C/IMG-20250916-114235.jpg" alt="ছবি ২">
+            <img src="https://i.ibb.co.com/Vc9z8h1C/IMG-20250916-114235.jpg" alt="ছবি ৩">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/Nd42j9hf/IMG-20250919-200106.jpg" alt="ছবি ৩">
+            <img src="https://i.ibb.co.com/Nd42j9hf/IMG-20250919-200106.jpg" alt="ছবি ৪">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/F1y6R7F/IMG-20250916-111303.jpg" alt="ছবি ৪">
+            <img src="https://i.ibb.co.com/F1y6R7F/IMG-20250916-111303.jpg" alt="ছবি ৫">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/Lzyq18mz/Screenshot-20250919-194928.jpg" alt="ছবি ৫">
+            <img src="https://i.ibb.co.com/Lzyq18mz/Screenshot-20250919-194928.jpg" alt="ছবি ৬">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/DHrmqKZL/PXL-20250915-120457678-PHOTOSPHERE.jpg" alt="ছবি ৬">
+            <img src="https://i.ibb.co.com/DHrmqKZL/PXL-20250915-120457678-PHOTOSPHERE.jpg" alt="ছবি ৭">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/XxkYdYVm/Sumon.jpg" alt="ছবি ৭">
+            <img src="https://i.ibb.co.com/XxkYdYVm/Sumon.jpg" alt="ছবি ৮">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/PGNdzzjx/IMG-20250921-112834.jpg" alt="ছবি ৮">
+            <img src="https://i.ibb.co.com/PGNdzzjx/IMG-20250921-112834.jpg" alt="ছবি ৯">
         </div>
     </div>
 
