--- a/gallery.html
+++ b/gallery.html
@@ -76,28 +76,53 @@
         </div>
         
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/ZsjYYMd/IMG-20250921-113033.jpg" alt="ছবি ২">
+            <img src="https://i.ibb.co.com/SFKFDj7/IMG-1137.jpg" alt="ছবি ২">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/Vc9z8h1C/IMG-20250916-114235.jpg" alt="ছবি ৩">
+            <img src="https://i.ibb.co.com/3YvhMfZJ/IMG-1133.jpg" alt="ছবি ৩">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/Nd42j9hf/IMG-20250919-200106.jpg" alt="ছবি ৪">
+            <img src="https://i.ibb.co.com/zHH7fNYT/IMG-20250924-114719.jpg" alt="ছবি ৪">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/F1y6R7F/IMG-20250916-111303.jpg" alt="ছবি ৫">
+            <img src="https://i.ibb.co.com/sJbwrhyr/IMG-20250924-122140.jpg" alt="ছবি ৫">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/Lzyq18mz/Screenshot-20250919-194928.jpg" alt="ছবি ৬">
+            <img src="https://i.ibb.co.com/qMY9VcbY/IMG-1135.jpg" alt="ছবি ৬">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/DHrmqKZL/PXL-20250915-120457678-PHOTOSPHERE.jpg" alt="ছবি ৭">
+            <img src="https://i.ibb.co.com/q3vmnW99/IMG-1134.jpg" alt="ছবি ৭">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/XxkYdYVm/Sumon.jpg" alt="ছবি ৮">
+            <img src="https://i.ibb.co.com/LhtXZSmp/IMG-20250924-WA0004.jpg" alt="ছবি ৮">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ibb.co.com/PGNdzzjx/IMG-20250921-112834.jpg" alt="ছবি ৯">
+            <img src="https://i.ibb.co.com/99GXg2Fw/IMG-20250924-WA0001.jpg" alt="ছবি ৯">
+        </div>
+
+        <div class="gallery-item">
+            <img src="https://i.ibb.co.com/ZsjYYMd/IMG-20250921-113033.jpg" alt="ছবি ১০">
+        </div>
+        <div class="gallery-item">
+            <img src="https://i.ibb.co.com/Vc9z8h1C/IMG-20250916-114235.jpg" alt="ছবি ১১">
+        </div>
+        <div class="gallery-item">
+            <img src="https://i.ibb.co.com/Nd42j9hf/IMG-20250919-200106.jpg" alt="ছবি ১২">
+        </div>
+        <div class="gallery-item">
+            <img src="https://i.ibb.co.com/F1y6R7F/IMG-20250916-111303.jpg" alt="ছবি ১৩">
+        </div>
+        <div class="gallery-item">
+            <img src="https://i.ibb.co.com/Lzyq18mz/Screenshot-20250919-194928.jpg" alt="ছবি ১৪">
+        </div>
+        <div class="gallery-item">
+            <img src="https://i.ibb.co.com/DHrmqKZL/PXL-20250915-120457678-PHOTOSPHERE.jpg" alt="ছবি ১৫">
+        </div>
+        <div class="gallery-item">
+            <img src="https://i.ibb.co.com/XxkYdYVm/Sumon.jpg" alt="ছবি ১৬">
+        </div>
+        <div class="gallery-item">
+            <img src="https://i.ibb.co.com/PGNdzzjx/IMG-20250921-112834.jpg" alt="ছবি ১৭">
         </div>
     </div>
 
