--- a/teachers.html
+++ b/teachers.html
@@ -141,7 +141,7 @@
             <img src="https://i.ibb.co.com/s9sWDbJF/Islam.jpg" alt="মোঃ আমজাদ আলী" class="photo">
             <h3>মোঃ আমজাদ আলী</h3>
             <p><strong>বিষয়:</strong> ইসলাম</p>
-            <p><strong>মোবাইল নাম্বার:</strong> __________</p>
+            <p><strong>মোবাইল নাম্বার:</strong> 01734060045 </p>
             <p><strong>ঠিকানা:</strong> ভাদুরিয়া, নবাবগঞ্জ, দিনাজপুর</p>
         </div>
         
