--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
     <div class="notice-board">
         <h2 class="section-title">গুরুত্বপূর্ণ নোটিশ</h2>
         <ul class="notice-list">
-            <li class="notice-item">📌📝আগামী ২৬ সেপ্টেম্বর থেকে ৭ অক্টোবর পর্যন্ত দুর্গাপূজার বন্ধ থাকবে মোট ১২ দিন ।</li>
+            <li class="notice-item">📌📝৮ তাং বুধবার থেকে কলেজ এর ক্লাস শুরু হয়েছে।</li>
             <li class="notice-item">🎉 একাদশ শ্রেণির উদ্বোধনী ক্লাস ক্লাস শুরু হয়েছে</li>
             <li class="notice-item">📝একাদশ শ্রেণির ভর্তি কার্যক্রম এখনো অব্যাহত আছে</li>
             <li class="notice-item">বিভিন্ন আপডেট পেতে Ubdate অপশনে ক্লিক করে দেখে নাও🔴</li>
